# calculator-in-haskell

./: LICENSE  README.md  calculator.cabal
cli-src/: calc.hs
doctest/: doctests.hs
src/Calculator/: Eval.lhs  Parsing.lhs  Syntax.lhs
