name:                calculator
version:             0.1.0.0
synopsis:            Simple command-line calculator
-- description:         
license:             MIT
license-file:        LICENSE
author:              渡邊裕貴 (Watanabe Yuki) <magicant.wonderwand@gmail.com>
maintainer:          渡邊裕貴 (Watanabe Yuki) <magicant.wonderwand@gmail.com>
copyright:           Copyright © 2016 Watanabe Yuki
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
