name:                calculator
version:             0.1.0.0
synopsis:            Simple command-line calculator
-- description:         
license:             MIT
license-file:        LICENSE
author:              渡邊裕貴 (Watanabe Yuki) <magicant.wonderwand@gmail.com>
maintainer:          渡邊裕貴 (Watanabe Yuki) <magicant.wonderwand@gmail.com>
copyright:           Copyright © 2016 Watanabe Yuki
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Calculator.Parsing,
    Calculator.Syntax
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.7 && <4.8,
    parsec >=3.1.5 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
    base >=4.7 && <4.8,
    doctest >=0.9.9
  hs-source-dirs:      doctest
  default-language:    Haskell2010
